--- a/src/css/design-tokens.typography.font-family.css
+++ b/src/css/design-tokens.typography.font-family.css
@@ -6,18 +6,14 @@
     "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji"; */
 
-  /* --font-family-sans: "IBM Plex Sans", -apple-system, BlinkMacSystemFont,
+  --font-family-sans: "IBM Plex Sans", -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji";
+
+  /* --font-family-sans: "Ruda", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji"; */
 
-  /* --font-family-sans: "IBM Plex Sans", -apple-system, BlinkMacSystemFont,
-    "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji";
- */
-  --font-family-sans: "Ruda", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji";
-
-  --font-family-monospace: consolas, "Liberation Mono", menlo, courier,
-    monospace;
+  /* --font-family-monospace: consolas, "Liberation Mono", menlo, courier,
+    monospace; */
 }
