finish card component

--- a/src/test.njk
+++ b/src/test.njk
@@ -3,9 +3,6 @@ title: Zaidan
 layout: layouts/base.njk
 ---
 
-<div>
-    {% include "./thumbnail.html" %}
-    {% include "./thumbnail.html" %}
-    {% include "./thumbnail.html" %}
+<div style="padding:10px;">
     {% include "./thumbnail.html" %}
 </div>
