--- a/src/css/components/thumbnail.css
+++ b/src/css/components/thumbnail.css
@@ -1,6 +1,7 @@
 .thumbnail {
   width: 104px;
   height: 148px;
+  position: relative;
 }
 
 .card {
@@ -23,6 +24,32 @@
   display: flex;
   justify-content: space-between;
   font-size: var(--step--2);
+  align-items: center;
+  color: var(--color-primary-700);
+}
+
+.thumbnail__tag {
+  position: absolute;
+  top: 4px;
+  left: 0px;
+  width: 40px;
+  height: 24px;
+  background-color: var(--color-primary-600);
+  border-radius: 8px 8px 8px 0px;
+  color: var(--color-primary-50);
+  font-size: var(--step--1);
+  z-index: 30;
+  text-align: center;
+}
+
+.thumbnail__tag_bottom {
+  position: absolute;
+  width: 4px;
+  height: 5.74px;
+  top: 28px;
+  left: 0px;
+  border-radius: 0px 0px 0px 8px;
+  background-color: var(--color-primary-900);
 }
 
 .card__like_icon {
@@ -30,4 +57,12 @@
   height: 16px;
   background-color: var(--color-primary-200);
   border-radius: 4px;
+  padding: 1px;
+}
+
+.icon_border {
+  width: 14px;
+  height: 14px;
+  border-radius: 4px;
+  border: 1px dotted var(--color-primary-700);
 }
