--- a/src/css/design-tokens.typography.font-family.css
+++ b/src/css/design-tokens.typography.font-family.css
@@ -2,13 +2,13 @@
   /* --font-family-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans",
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji"; */
 
-  /* --font-family-sans: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
+  --font-family-sans: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji"; */
-
-  --font-family-sans: "IBM Plex Sans", -apple-system, BlinkMacSystemFont,
-    "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji";
+
+  /* --font-family-sans: "IBM Plex Sans", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji"; */
 
   /* --font-family-sans: "Ruda", -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji",
