--- a/src/pattern-library.njk
+++ b/src/pattern-library.njk
@@ -9,204 +9,148 @@ layout: layouts/base.njk
       <h1>{{ title }}</h1>
     </div>
   </div>
-
   <div class="doc-section">
     <div class="doc-section__header">
       <h2>Text Sizes</h2>
     </div>
-
     <div class="doc-section__content">
       <div class="flow">
         <p style="font-size: var(--step--2);">
-          <code>--step--2</code> The sky, at sunset, looked like a carnivorous
-          flower.
+          <code>--step--2</code>
+          The sky, at sunset, looked like a carnivorous
+                              flower.
         </p>
         <p style="font-size: var(--step--1);">
-          <code>--step-1</code> The sky, at sunset, looked like a carnivorous
-          flower.
+          <code>--step-1</code>
+          The sky, at sunset, looked like a carnivorous
+                              flower.
         </p>
         <p style="font-size: var(--step-0);">
-          <code>--step-0</code> The sky, at sunset, looked like a carnivorous
-          flower.
+          <code>--step-0</code>
+          The sky, at sunset, looked like a carnivorous
+                              flower.
         </p>
         <p style="font-size: var(--step-1);">
-          <code>--step-1</code> The sky, at sunset, looked like a carnivorous
-          flower.
+          <code>--step-1</code>
+          The sky, at sunset, looked like a carnivorous
+                              flower.
         </p>
         <p style="font-size: var(--step-2);">
-          <code>--step-2</code> The sky, at sunset, looked like a carnivorous
-          flower.
+          <code>--step-2</code>
+          The sky, at sunset, looked like a carnivorous
+                              flower.
         </p>
         <p style="font-size: var(--step-3);">
-          <code>--step-3</code> The sky, at sunset, looked like a carnivorous
-          flower.
+          <code>--step-3</code>
+          The sky, at sunset, looked like a carnivorous
+                              flower.
         </p>
         <p style="font-size: var(--step-4);">
-          <code>--step-4</code> The sky, at sunset, looked like a carnivorous
-          flower.
+          <code>--step-4</code>
+          The sky, at sunset, looked like a carnivorous
+                              flower.
         </p>
         <p style="font-size: var(--step-5);">
-          <code>--step-5</code> The sky, at sunset, looked like a carnivorous
-          flower.
+          <code>--step-5</code>
+          The sky, at sunset, looked like a carnivorous
+                              flower.
         </p>
       </div>
     </div>
   </div>
-
   <div class="doc-section">
     <div class="doc-section__header">
       <h2>Colors</h2>
     </div>
-
     <div class="doc-section__content">
       <div class="flow">
         <h3>Neutrals</h3>
-        <ul
-          class="grid"
-          role="list"
-          style="--grid-min-item-size: 5rem; --gap: 1rem"
-        >
+        <ul class="grid" role="list" style="--grid-min-item-size: 5rem; --gap: 1rem">
           <li>
             <div class="doc-swatch" style="color: var(--color-neutral-0)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-neutral-100)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-neutral-100)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-neutral-200)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-neutral-200)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-neutral-300)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-neutral-300)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-neutral-400)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-neutral-400)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-neutral-500)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-neutral-500)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-neutral-600)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-neutral-600)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-neutral-700)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-neutral-700)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-neutral-800)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-neutral-800)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-neutral-900)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-neutral-900)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-neutral-1000)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-neutral-1000)"></div>
           </li>
         </ul>
-
         <h3>Primary</h3>
-        <ul
-          class="grid"
-          role="list"
-          style="--grid-min-item-size: 5rem; --gap: 1rem"
-        >
+        <ul class="grid" role="list" style="--grid-min-item-size: 5rem; --gap: 1rem">
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-primary-100)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-primary-100)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-primary-200)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-primary-200)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-primary-300)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-primary-300)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-primary-400)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-primary-400)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-primary-500)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-primary-500)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-primary-600)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-primary-600)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-primary-700)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-primary-700)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-primary-800)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-primary-800)"></div>
           </li>
           <li>
-            <div
-              class="doc-swatch"
-              style="color: var(--color-primary-900)"
-            ></div>
+            <div class="doc-swatch" style="color: var(--color-primary-900)"></div>
           </li>
         </ul>
       </div>
     </div>
   </div>
-
   <div class="doc-section" data-doc-section-bleed="true">
     <div class="doc-section__header">
       <h2>Sample section that bleeds</h2>
     </div>
-
     <div class="doc-section__content">
       <div class="flow">
         <h1>h1 Hello world</h1>
         <h2>h2 Hello world</h2>
         <h3>h3 Hello world</h3>
       </div>
+    </div>
+  </div>
+  <div class="doc-section" data-doc-section-bleed="true">
+    <div class="doc-section__header">
+      <h2>Components</h2>
+    </div>
+    <div class="doc-section__content">
+      {% include "./thumbnail.html" %}
     </div>
   </div>
 </main>
