--- a/src/test.njk
+++ b/src/test.njk
@@ -1,11 +1,48 @@
 ---
-title: Zaidan
+title: Layout
 layout: layouts/base.njk
 ---
 
-<div>
-    {% include "./thumbnail.html" %}
-    {% include "./thumbnail.html" %}
-    {% include "./thumbnail.html" %}
-    {% include "./thumbnail.html" %}
+<div style='margin: 16px'>
+    <p style='font-size: 13.33px; font-weight: bold;'>Title</p>
+    <div class='card__wrapper'>
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+    </div>
 </div>
+<div style='margin: 16px'>
+    <p style='font-size: 13.33px; font-weight: bold;'>Title</p>
+    <div class='card__wrapper'>
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+    </div>
+</div>
+<div style='margin: 16px'>
+    <p style='font-size: 13.33px; font-weight: bold;'>Title</p>
+    <div class='card__wrapper'>
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+    </div>
+</div>
+{% include "./responsive-cards.html" %}
