--- a/src/test.njk
+++ b/src/test.njk
@@ -1,48 +1,8 @@
 ---
-title: Layout
+title: Zaidan
 layout: layouts/base.njk
 ---
 
-<div style='margin: 16px'>
-    <p style='font-size: 13.33px; font-weight: bold;'>Title</p>
-    <div class='card__wrapper'>
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-    </div>
+<div style="padding:10px;">
+    {% include "./thumbnail.html" %}
 </div>
-<div style='margin: 16px'>
-    <p style='font-size: 13.33px; font-weight: bold;'>Title</p>
-    <div class='card__wrapper'>
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-    </div>
-</div>
-<div style='margin: 16px'>
-    <p style='font-size: 13.33px; font-weight: bold;'>Title</p>
-    <div class='card__wrapper'>
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-        {% include "./thumbnail.html" %}
-    </div>
-</div>
-{% include "./responsive-cards.html" %}
