--- a/src/css/components/cards.css
+++ b/src/css/components/cards.css
@@ -1,6 +1,11 @@
 .card__wrapper {
-  width: max-content;
-  margin-block: 16px;
   display: flex;
   gap: 8px;
+  overflow: auto hidden;
+  overscroll-behavior-x: contain;
+  scroll-snap-type: x mandatory;
+}
+
+.cards {
+  margin: 32px var(--space-s-l) 0px;
 }
