--- a/src/home.njk
+++ b/src/home.njk
@@ -3,8 +3,8 @@ title: Home Page
 layout: layouts/base.njk
 ---
 
-<div style='margin: 16px'>
-    <p style='font-size: 13.33px; font-weight: bold;'>Title</p>
+<div class="cards">
+    <p style='font-size: 13.33px; font-weight: bold;margin-bottom:10px;'>Title</p>
     <div class='card__wrapper'>
         {% include "./thumbnail.html" %}
         {% include "./thumbnail.html" %}
@@ -17,8 +17,8 @@ layout: layouts/base.njk
         {% include "./thumbnail.html" %}
     </div>
 </div>
-<div style='margin: 16px'>
-    <p style='font-size: 13.33px; font-weight: bold;'>Title</p>
+<div class="cards">
+    <p style='font-size: 13.33px; font-weight: bold;margin-bottom:10px;'>Title</p>
     <div class='card__wrapper'>
         {% include "./thumbnail.html" %}
         {% include "./thumbnail.html" %}
@@ -31,8 +31,8 @@ layout: layouts/base.njk
         {% include "./thumbnail.html" %}
     </div>
 </div>
-<div style='margin: 16px'>
-    <p style='font-size: 13.33px; font-weight: bold;'>Title</p>
+<div class="cards">
+    <p style='font-size: 13.33px; font-weight: bold;margin-bottom:10px;'>Title</p>
     <div class='card__wrapper'>
         {% include "./thumbnail.html" %}
         {% include "./thumbnail.html" %}
