--- a/src/home.njk
+++ b/src/home.njk
@@ -15,11 +15,6 @@ layout: layouts/base.njk
         {% include "./thumbnail.html" %}
         {% include "./thumbnail.html" %}
         {% include "./thumbnail.html" %}
-    </div>
-</div>
-<div class="cards">
-    <p style='font-size: 13.33px; font-weight: bold;margin-bottom:10px;'>Title</p>
-    <div class='card__wrapper'>
         {% include "./thumbnail.html" %}
         {% include "./thumbnail.html" %}
         {% include "./thumbnail.html" %}
@@ -34,6 +29,38 @@ layout: layouts/base.njk
 <div class="cards">
     <p style='font-size: 13.33px; font-weight: bold;margin-bottom:10px;'>Title</p>
     <div class='card__wrapper'>
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+    </div>
+</div>
+<div class="cards">
+    <p style='font-size: 13.33px; font-weight: bold;margin-bottom:10px;'>Title</p>
+    <div class='card__wrapper'>
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
+        {% include "./thumbnail.html" %}
         {% include "./thumbnail.html" %}
         {% include "./thumbnail.html" %}
         {% include "./thumbnail.html" %}
